[gd_scene load_steps=3 format=3 uid="uid://bhjuxvebimqov"]

[ext_resource type="Script" path="res://Scripts/ComboManager.gd" id="1_bhqmy"]
[ext_resource type="AudioStream" uid="uid://vn2emi73bj4f" path="res://Assets/Sounds/sfx/combo_reset.wav" id="2_h4ctp"]

[node name="ComboManager" type="Node2D"]
script = ExtResource("1_bhqmy")

[node name="collectible_streak_timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="collectible_streak_finished" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_h4ctp")
volume_db = -5.0

[connection signal="timeout" from="collectible_streak_timer" to="." method="_on_collectible_streak_timer_timeout"]
